plugincdm/src/main/java/org/cdm/antlr/CdmParser.java
package org.cdm.antlr;// Generated from CdmParser.g4 by ANTLR 4.13.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CdmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Asect=1, Break=2, Continue=3, Do=4, Else=5, End=6, Ext=7, Fi=8, If=9, 
		Is=10, Macro=11, Rsect=12, Stays=13, Then=14, Tplate=15, Until=16, Wend=17, 
		While=18, MACRO_FOOTER=19, DOT=20, COMMA=21, PLUS=22, MINUS=23, COLON=24, 
		ASTERISK=25, ANGLE_BRACKET=26, OPEN_PAREN=27, CLOSE_PAREN=28, LINE_MARK_MARKER=29, 
		SLASH=30, LABEL_END=31, APOSTROPHE=32, DOLLAR_SIGN=33, QUESTION_MARK=34, 
		REGISTER=35, WORD=36, WORD_WITH_DOTS=37, DECIMAL_NUMBER=38, BINARY_NUMBER=39, 
		HEX_NUMBER=40, STRING=41, CHAR=42, NEWLINE=43, COMMENT=44, WS=45, BASE64=46, 
		OTHER=47, UNEXPECTED_TOKEN=48;
	public static final int
		RULE_program = 0, RULE_section = 1, RULE_asect_header = 2, RULE_rsect_header = 3, 
		RULE_tplate_header = 4, RULE_macro = 5, RULE_macro_header = 6, RULE_code_block = 7, 
		RULE_break_statement = 8, RULE_continue_statement = 9, RULE_line = 10, 
		RULE_instructionWithArg = 11, RULE_labels_declaration = 12, RULE_label = 13, 
		RULE_arguments = 14, RULE_branch_mnemonic = 15, RULE_conditional = 16, 
		RULE_conditions = 17, RULE_connective_condition = 18, RULE_condition = 19, 
		RULE_else_clause = 20, RULE_while_loop = 21, RULE_until_loop = 22, RULE_argument = 23, 
		RULE_byte_expr = 24, RULE_addr_expr = 25, RULE_first_term = 26, RULE_add_term = 27, 
		RULE_term = 28, RULE_string = 29, RULE_register = 30, RULE_character = 31, 
		RULE_number = 32, RULE_name = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "section", "asect_header", "rsect_header", "tplate_header", 
			"macro", "macro_header", "code_block", "break_statement", "continue_statement", 
			"line", "instructionWithArg", "labels_declaration", "label", "arguments", 
			"branch_mnemonic", "conditional", "conditions", "connective_condition", 
			"condition", "else_clause", "while_loop", "until_loop", "argument", "byte_expr", 
			"addr_expr", "first_term", "add_term", "term", "string", "register", 
			"character", "number", "name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'asect'", "'break'", "'continue'", "'do'", "'else'", "'end'", 
			"'ext'", "'fi'", "'if'", "'is'", "'macro'", "'rsect'", "'stays'", "'then'", 
			"'tplate'", "'until'", "'wend'", "'while'", null, "'.'", "','", "'+'", 
			"'-'", "':'", "'*'", "'>'", "'('", "')'", "'-|'", "'/'", null, "'''", 
			"'$'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Asect", "Break", "Continue", "Do", "Else", "End", "Ext", "Fi", 
			"If", "Is", "Macro", "Rsect", "Stays", "Then", "Tplate", "Until", "Wend", 
			"While", "MACRO_FOOTER", "DOT", "COMMA", "PLUS", "MINUS", "COLON", "ASTERISK", 
			"ANGLE_BRACKET", "OPEN_PAREN", "CLOSE_PAREN", "LINE_MARK_MARKER", "SLASH", 
			"LABEL_END", "APOSTROPHE", "DOLLAR_SIGN", "QUESTION_MARK", "REGISTER", 
			"WORD", "WORD_WITH_DOTS", "DECIMAL_NUMBER", "BINARY_NUMBER", "HEX_NUMBER", 
			"STRING", "CHAR", "NEWLINE", "COMMENT", "WS", "BASE64", "OTHER", "UNEXPECTED_TOKEN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CdmParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private String currentFile = "";
	    private int currentLine = 0;
	    private int currentOffset = 0;

	    public String getCurrentFile() { return currentFile; }
	    public int getCurrentLine() { return currentLine; }
	    public int getCurrentOffset() { return currentOffset; }

	public CdmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode End() { return getToken(CdmParser.End, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(CdmParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CdmParser.NEWLINE, i);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(68);
				match(NEWLINE);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35184372127746L) != 0)) {
				{
				{
				setState(74);
				section();
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(75);
					match(NEWLINE);
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionContext extends ParserRuleContext {
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
	 
		public SectionContext() { }
		public void copyFrom(SectionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AbsoluteSectionContext extends SectionContext {
		public Asect_headerContext asect_header() {
			return getRuleContext(Asect_headerContext.class,0);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public AbsoluteSectionContext(SectionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterAbsoluteSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitAbsoluteSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitAbsoluteSection(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateSectionContext extends SectionContext {
		public Tplate_headerContext tplate_header() {
			return getRuleContext(Tplate_headerContext.class,0);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public TemplateSectionContext(SectionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterTemplateSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitTemplateSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitTemplateSection(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RelocatableSectionContext extends SectionContext {
		public Rsect_headerContext rsect_header() {
			return getRuleContext(Rsect_headerContext.class,0);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public RelocatableSectionContext(SectionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterRelocatableSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitRelocatableSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitRelocatableSection(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MacroSectionContext extends SectionContext {
		public MacroContext macro() {
			return getRuleContext(MacroContext.class,0);
		}
		public MacroSectionContext(SectionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterMacroSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitMacroSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitMacroSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_section);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Asect:
				_localctx = new AbsoluteSectionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				asect_header();
				setState(89);
				code_block();
				}
				break;
			case Rsect:
				_localctx = new RelocatableSectionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				rsect_header();
				setState(92);
				code_block();
				}
				break;
			case Tplate:
				_localctx = new TemplateSectionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				tplate_header();
				setState(95);
				code_block();
				}
				break;
			case Macro:
			case WS:
				_localctx = new MacroSectionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				macro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Asect_headerContext extends ParserRuleContext {
		public TerminalNode Asect() { return getToken(CdmParser.Asect, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CdmParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CdmParser.NEWLINE, i);
		}
		public Asect_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asect_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterAsect_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitAsect_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitAsect_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asect_headerContext asect_header() throws RecognitionException {
		Asect_headerContext _localctx = new Asect_headerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_asect_header);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(Asect);
			setState(101);
			number();
			setState(103); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(102);
					match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(105); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Rsect_headerContext extends ParserRuleContext {
		public TerminalNode Rsect() { return getToken(CdmParser.Rsect, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CdmParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CdmParser.NEWLINE, i);
		}
		public Rsect_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rsect_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterRsect_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitRsect_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitRsect_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rsect_headerContext rsect_header() throws RecognitionException {
		Rsect_headerContext _localctx = new Rsect_headerContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rsect_header);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(Rsect);
			setState(108);
			name();
			setState(110); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(109);
					match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(112); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tplate_headerContext extends ParserRuleContext {
		public TerminalNode Tplate() { return getToken(CdmParser.Tplate, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CdmParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CdmParser.NEWLINE, i);
		}
		public Tplate_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tplate_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterTplate_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitTplate_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitTplate_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tplate_headerContext tplate_header() throws RecognitionException {
		Tplate_headerContext _localctx = new Tplate_headerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tplate_header);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(Tplate);
			setState(115);
			name();
			setState(117); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(116);
					match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(119); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MacroContext extends ParserRuleContext {
		public Macro_headerContext macro_header() {
			return getRuleContext(Macro_headerContext.class,0);
		}
		public Code_blockContext code_block() {
			return getRuleContext(Code_blockContext.class,0);
		}
		public TerminalNode MACRO_FOOTER() { return getToken(CdmParser.MACRO_FOOTER, 0); }
		public MacroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterMacro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitMacro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitMacro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MacroContext macro() throws RecognitionException {
		MacroContext _localctx = new MacroContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_macro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			macro_header();
			setState(122);
			code_block();
			setState(123);
			match(MACRO_FOOTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Macro_headerContext extends ParserRuleContext {
		public TerminalNode Macro() { return getToken(CdmParser.Macro, 0); }
		public TerminalNode WORD() { return getToken(CdmParser.WORD, 0); }
		public TerminalNode SLASH() { return getToken(CdmParser.SLASH, 0); }
		public TerminalNode DECIMAL_NUMBER() { return getToken(CdmParser.DECIMAL_NUMBER, 0); }
		public TerminalNode NEWLINE() { return getToken(CdmParser.NEWLINE, 0); }
		public List<TerminalNode> WS() { return getTokens(CdmParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(CdmParser.WS, i);
		}
		public Macro_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterMacro_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitMacro_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitMacro_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Macro_headerContext macro_header() throws RecognitionException {
		Macro_headerContext _localctx = new Macro_headerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_macro_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(125);
				match(WS);
				}
			}

			setState(128);
			match(Macro);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(129);
				match(WS);
				}
			}

			setState(132);
			match(WORD);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(133);
				match(WS);
				}
			}

			setState(136);
			match(SLASH);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(137);
				match(WS);
				}
			}

			setState(140);
			match(DECIMAL_NUMBER);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(141);
				match(WS);
				}
			}

			setState(144);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Code_blockContext extends ParserRuleContext {
		public List<Break_statementContext> break_statement() {
			return getRuleContexts(Break_statementContext.class);
		}
		public Break_statementContext break_statement(int i) {
			return getRuleContext(Break_statementContext.class,i);
		}
		public List<Continue_statementContext> continue_statement() {
			return getRuleContexts(Continue_statementContext.class);
		}
		public Continue_statementContext continue_statement(int i) {
			return getRuleContext(Continue_statementContext.class,i);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<ConditionalContext> conditional() {
			return getRuleContexts(ConditionalContext.class);
		}
		public ConditionalContext conditional(int i) {
			return getRuleContext(ConditionalContext.class,i);
		}
		public List<While_loopContext> while_loop() {
			return getRuleContexts(While_loopContext.class);
		}
		public While_loopContext while_loop(int i) {
			return getRuleContext(While_loopContext.class,i);
		}
		public List<Until_loopContext> until_loop() {
			return getRuleContexts(Until_loopContext.class);
		}
		public Until_loopContext until_loop(int i) {
			return getRuleContext(Until_loopContext.class,i);
		}
		public List<MacroContext> macro() {
			return getRuleContexts(MacroContext.class);
		}
		public MacroContext macro(int i) {
			return getRuleContext(MacroContext.class,i);
		}
		public Code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterCode_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitCode_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitCode_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Code_blockContext code_block() throws RecognitionException {
		Code_blockContext _localctx = new Code_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_code_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(153);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						setState(146);
						break_statement();
						}
						break;
					case 2:
						{
						setState(147);
						continue_statement();
						}
						break;
					case 3:
						{
						setState(148);
						line();
						}
						break;
					case 4:
						{
						setState(149);
						conditional();
						}
						break;
					case 5:
						{
						setState(150);
						while_loop();
						}
						break;
					case 6:
						{
						setState(151);
						until_loop();
						}
						break;
					case 7:
						{
						setState(152);
						macro();
						}
						break;
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Break_statementContext extends ParserRuleContext {
		public TerminalNode Break() { return getToken(CdmParser.Break, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(CdmParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CdmParser.NEWLINE, i);
		}
		public Break_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_break_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).enterBreak_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CdmParserListener) ((CdmParserListener)listener).exitBreak_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CdmParserVisitor) return ((CdmParserVisitor<? extends T>)visitor).visitBreak_statement(this);
			else return visitor.visitChildren(this);
		}
	}
